# dx12

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/models/fbxmodel/: Climbing To Top.fbx  Strut Walking.fbx
assets/scenes/: default.json
assets/ui/: hud.rml
docs/superpowers/plans/: 2026-04-04-rmlui-game-hud.md
docs/superpowers/specs/: 2026-03-27-scene-management-design.md  2026-04-04-rmlui-game-hud-design.md
scripts/: game.lua
shaders/debug/: DebugLine.hlsl
shaders/forward/: Forward.hlsl  ForwardGrid.hlsl  ForwardSkinned.hlsl  PBR.hlsli
shaders/shadow/: ShadowPass.hlsl  ShadowPassSkinned.hlsl
shaders/ui/: UI.hlsl
src/: main.cpp
src/animation/: AnimationClip.cpp  AnimationClip.h  Animator.cpp  Animator.h  CMakeLists.txt  NodeAnimationClip.cpp  NodeAnimationClip.h  NodeAnimator.cpp  NodeAnimator.h  NodeGraph.cpp  NodeGraph.h  Skeleton.cpp  Skeleton.h  SkinningBuffer.cpp  SkinningBuffer.h
src/audio/: AudioClip.cpp  AudioClip.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt
src/core/: Application.cpp  Application.h  Assert.h  CMakeLists.txt  GameClock.cpp  GameClock.h  Logger.cpp  Logger.h  Types.h  Window.cpp  Window.h
src/ecs/: CMakeLists.txt  Components.cpp  Components.h
src/graphics/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  FrameResources.cpp  FrameResources.h  GpuResource.cpp  GpuResource.h  GraphicsDevice.cpp  GraphicsDevice.h  PipelineState.cpp  PipelineState.h  RootSignature.cpp  RootSignature.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h
src/gui/: CMakeLists.txt  ImGuiManager.cpp  ImGuiManager.h  RmlRenderer.cpp  RmlRenderer.h  RmlSystem.cpp  RmlSystem.h  RmlUIManager.cpp  RmlUIManager.h
src/input/: CMakeLists.txt  InputSystem.cpp  InputSystem.h
src/physics/: CMakeLists.txt  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  PhysicsSystem.cpp  PhysicsSystem.h
src/renderer/: CMakeLists.txt  Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h
src/resource/: CMakeLists.txt  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h  ShaderCompiler.cpp  ShaderCompiler.h  TextureLoader.cpp  TextureLoader.h
src/scene/: CMakeLists.txt  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Transform.cpp  Transform.h
src/scripting/: CMakeLists.txt  ScriptEngine.cpp  ScriptEngine.h
